src/test/ui/const-generics/struct-with-invalid-const-param.full.stderr
error[E0573]: expected type, found const parameter `C`
  --> $DIR/struct-with-invalid-const-param.rs:7:23
   |
LL | struct S<const C: u8>(C);
   |                       ^ not a type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
